--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header{
+  display:flex;
+  border-bottom:1px solid black;
+  padding:10px 30px;
+  justify-content:space-between;
+  align-items:center;
+  background-color:black;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header img{
+  width: 200px;
+  height: 80px;
+  
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.links{
+  display:flex;
+  justify-content:space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width:40%
 }
 
-.App-link {
-  color: #61dafb;
+.links a{
+  text-decoration: none;
+  color:blue;
+  font-size:24px;
+  font-size: 700;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.links .active{
+  color:pink;
+  font-size: 30px;
 }
